# LeadScore

./: .env.example  .gitignore  README.md  pyproject.toml
core/: pagination.py  settings.py  settings_drf.py  urls.py  utils.py
leads/: api_url.py
leads/api_viewsets/: __init__.py  agents_viewset.py  leads_viewset.py
leads/filters/: __init__.py  agents_for_lead_filters.py  leads_filters.py
leads/migrations/: 0001_initial.py  0002_agent_created_at_agent_updated_at.py  0003_lead.py
leads/models/: __init__.py  agent.py  lead.py
leads/models/managers/: __init__.py  agent_manager.py
leads/serializers/: __init__.py  agents_serializer.py  lead_support_serializer.py  leads_serializer.py
