[tool.poetry]
name = "leadscore"
version = "0.1.0"
description = ""
authors = ["Silas Vasconcelos <silasvasconcelos@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
