[tool.poetry]
name = "leadscore"
version = "0.1.0"
description = ""
authors = ["Silas Vasconcelos <silasvasconcelos@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-environ = "^0.9.0"
drf-yasg = "^1.21.3"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
